--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -4,5 +4,7 @@ cmake_minimum_required(VERSION 2.8.12)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(SKIP_RPATH)
 
+find_package(EPICS REQUIRED)
+
 add_executable(example example.cpp)
 target_link_libraries(example ${CONAN_LIBS})
