--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -8,5 +8,5 @@ find_package(EPICS REQUIRED)
 find_package(Threads REQUIRED)
 
 add_executable(example example.cpp)
-target_link_libraries(example ${CONAN_LIBS} ${EPICS_LIBRARIES} Threads::Threads)
+target_link_libraries(example ${CONAN_LIBS} ${EPICS_LIBRARIES} Threads::Threads ${CMAKE_DL_LIBS})
 target_include_directories(example PRIVATE ${EPICS_INCLUDE_DIR})
